# ML-prediction-NBA

./: README.md
prediction/: README.md  app.css  app.py  knn_model.sav  pyproject.toml  selection_model.ipynb
prediction/prediction/: lib_levenshtein.py  lib_match.py  lib_predictions.py
prediction/tests/: test_levenshtein.py  test_match.py  test_prediction.py  test_predictions.py
scraping/: README.md  lib_BDD_box_score.py  lib_BDD_principale.py  lib_creation_dataframe.py  lib_driver.py  scraping.csv
transformation/: README.md  lib_transformation.py
