[tool.poetry]
name = "prediction"
version = "0.1.0"
description = ""
authors = ["Manon Valliot <94387843+ManonValliot@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.2.0"
textual = "^0.10.0"
pandas = "^1.5.3"
numpy = "^1.24.1"
asyncio = "^3.4.3"
Unidecode = "^1.3.6"
Levenshtein = "^0.20.9"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
textual = "^0.10.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
